--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -1,1 +1,26 @@
+<h2 align="center">
+Step1: 原始資料取得與讀取
+</h2>
+
+
+### 1. 地震資料取得
+
+
+地震資料的取得可以透過向中央氣象局申購，或是下載測站公開的地震資料，兩者取得的地震資料格式皆為加速度數據之文字檔(.txt)，如下圖所示。
+
+
+![image](/images/地震資料格式.png) 
+
+
+文字檔(.txt)中的內容記錄該次地震事件之各項資料，加速度數據的採樣為每 0.005秒，即採樣頻率 200Hz，而當中 U 為 U-D 方向峰值加速度(垂直)，N 為 N-S 方向峰值加速度(南北)，E 為 E-W 方向峰值加速度(東西)。
+
+
+
+
+
+> 氣象局資料申購： [https://hdps.cwa.gov.tw/hdps/](https://hdps.cwa.gov.tw/hdps/login_page)
+
+
+### 2. 讀取地震資料
+
 
