--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -15,12 +15,31 @@ Step1: 原始資料取得與讀取
 文字檔(.txt)中的內容記錄該次地震事件之各項資料，加速度數據的採樣為每 0.005秒，即採樣頻率 200Hz，而當中 U 為 U-D 方向峰值加速度(垂直)，N 為 N-S 方向峰值加速度(南北)，E 為 E-W 方向峰值加速度(東西)。
 
 
-
-
-
 > 氣象局資料申購： [https://hdps.cwa.gov.tw/hdps/](https://hdps.cwa.gov.tw/hdps/login_page)
 
 
 ### 2. 讀取地震資料
 
+在取得地震資料後，根據資料格式的不同，我們可以使用 ```python glob.glob(path_name) ```
+文字檔(.txt)，
+```python
 
+# 外加模組
+import numpy as np
+import glob
+
+# 讀取地震資料
+dirPathPattern = r"file_path\*.txt"  
+# 想查詢的資料夾位置 *.後為檔案類型
+result = glob.glob(dirPathPattern)
+
+for j in result:
+        data = np.loadtxt(j)
+        #data = np.loadtxt(j,skiprows=15)
+        #skiprows 指跳過的行數
+        dt = 0.005 # 時間間隔  
+        a = data[:,1]  # 垂直向(P波)
+        n = len(a)  # 數據長度
+        t = np.linspace(0.0,dt*(n-1),n)
+               
+```
