--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -20,26 +20,28 @@ Step1: 原始資料取得與讀取
 
 ### 2. 讀取地震資料
 
-在取得地震資料後，根據資料格式的不同，我們可以使用 ```python glob.glob(path_name) ```
-文字檔(.txt)，
-```python
+在取得地震資料後，我們可以使用Python中的glob函式庫，它是一種可以批次讀取文件的方法。
+首先，可以利用 ``` glob.glob(path_name) ``` 傳回所有符合的檔案路徑列表，並且可以根據資料格式的不同，設定想要傳回的檔案格式。
 
-# 外加模組
-import numpy as np
+
+因此，以上方的地震資料的文件格式為例，若只想要傳回格式為文字檔(.txt)的文件路徑，可以於 ``` path_name ``` 後方加上 ``` *.txt ```，這樣就可以成功傳回所有格式為文字檔(.txt)的文件路徑列表了。
+
+ 
+```python
 import glob
 
-# 讀取地震資料
-dirPathPattern = r"file_path\*.txt"  
-# 想查詢的資料夾位置 *.後為檔案類型
+dirPathPattern = r"path_name\*.txt"  
 result = glob.glob(dirPathPattern)
+```
+
+
+接下來，我們可以使用Python中的numpy函式庫中的 ``` np.loadtxt() ``` ，此方法常被用來讀取格式為(.txt)和(.csv)的文件，再搭配剛剛傳回文件路徑列表，就可以逐一的讀取每一個地震資料，並輸出當中的必要資訊，例如各方向的加速度值。
+
+
+```python
+import numpy as np
 
 for j in result:
         data = np.loadtxt(j)
-        #data = np.loadtxt(j,skiprows=15)
-        #skiprows 指跳過的行數
-        dt = 0.005 # 時間間隔  
-        a = data[:,1]  # 垂直向(P波)
-        n = len(a)  # 數據長度
-        t = np.linspace(0.0,dt*(n-1),n)
-               
+        a = data[:,1]  
 ```
