--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -43,5 +43,10 @@ import numpy as np
 
 for j in result:
         data = np.loadtxt(j)
-        a = data[:,1]  
+        a = data[:,1]
+        # U-D acceleration
+        a2 = data[:,2]
+        # N-S acceleration
+        a3 = data[:,3]
+        # E-W acceleration
 ```
