--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -35,7 +35,7 @@ result = glob.glob(dirPathPattern)
 ```
 
 
-接下來，我們可以使用Python中的numpy函式庫中的 ``` np.loadtxt() ``` ，此方法常被用來讀取格式為(.txt)和(.csv)的文件，再搭配剛剛傳回文件路徑列表，就可以逐一的讀取每一個地震資料，並輸出當中的必要資訊，例如各方向的加速度值。
+接下來，我們可以使用Python中的numpy函式庫中的 ``` np.loadtxt() ``` ，此方法常被用來讀取格式為(.txt)和(.csv)的文件，再搭配剛剛傳回文件路徑列表，就可以逐一的讀取每一個地震資料，並得到當中的必要資訊，例如各方向的加速度值。
 
 
 ```python
