--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -1,1 +1,84 @@
+<h2 align="center">
+Step2: 地震波偵測方法
+</h2>
+
+
+### 1. STA/LTA 比值偵測方法
+
+
+現今的地震早期預警 (EEW，Earthquake Early Warning) 技術，利用了縱波 (P 波) 和橫波 (S 波) 傳播速
+度的差異，可以根據測站記錄的早期資訊性 P 波來估計以 S 波為主的預期震度。
+
+
+若要運用上述特性來對地震的震度進行預估，就必須判斷 P 波的到達時間，而 STA/LTA 比值偵測方法就是
+一種可以用來偵測 P 波的到達時間的方法，它主要透過短時間平均值 (short-time-average) 與長時間平均值 (long-time-average) 的比值，並設定一閥值，當比值大於閥值時，就將那時間點判讀為 P 波的到達時間。
+
+
+```python
+import numpy as np
+
+data = np.loadtxt(file_path)
+# time interval
+dt = 0.005
+# # U-D acceleration
+a = data[:,1] 
+# data length
+n = len(a)
+t = np.linspace(0.0,dt*(n-1),n)
+
+# parameters for STA/LTA detection algorithm
+sta = 0.6
+lta = 3.0
+# set threshold
+p_value = 2.0
+             
+a_sta, a_lta, r, p_arrive = automatically_picking_p_time(a, dt, n, sta, lta, p_value)
+```
+
+```python
+def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
+    # calculate the time interval of STA and LTA
+    n_sta = int(sta/dt)
+    n_lta = int(lta/dt)
+
+    a1 = abs(a)
+    a_sta = []
+    a_lta = []
+    r = []
+
+    #fill in zeros for time points that do not yet have an average value
+    for i in range(0,n_sta):
+            a_sta.insert(i,0)     
+    for i in range(0,n_lta):
+            a_lta.insert(i,0)
+            r.insert(i,0)
+
+    # calculate the STA/LTA for each time point
+    for i in range(n_sta,n):           
+            a_sta1 = (sum(a1[i-n_sta:i-1]))/n_sta
+            a_sta.append(a_sta1)        
+    for i in range(n_lta,n):          
+            a_lta1 = (sum(a1[i-n_lta:i-1]))/n_lta
+            a_lta.append(a_lta1)   
+    for i in range(n_lta,n):
+            r1 = a_sta[i]/a_lta[i]
+            r.append(r1)  
+
+    # determine whether the threshold is reached       
+    for i in range(n_lta,n): 
+        if r[i] >= p_value:
+            p_arrive = i*dt
+            break   
+        
+    return a_sta, a_lta, r, p_arrive
+```
+
+### 2. 設定值調整
+
+
+當判斷 P 波到達時間的流程完成後，就可以根據判斷出來的結果做設定值調整，
+
+
+![image](/images/地震資料格式.png) 
+
 
