--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -20,11 +20,12 @@ import numpy as np
 data = np.loadtxt(file_path)
 # time interval
 dt = 0.005
-# # U-D acceleration
-a = data[:,1] 
+t = data[:,0]
+# U-D acceleration
+a = data[:,1]
 # data length
 n = len(a)
-t = np.linspace(0.0,dt*(n-1),n)
+
 
 # parameters for STA/LTA detection algorithm
 sta = 0.6
@@ -76,7 +77,8 @@ def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
 ### 2. 設定值調整
 
 
-當判斷 P 波到達時間的流程完成後，就可以根據判斷出來的結果做設定值調整，
+當判斷 P 波到達時間的流程完成後，就可以根據判斷出來的結果做設定值調整。
+為了能更好的去評估 P 波到達時間的判斷結果，我們可以將加速度和比值的變化圖繪製出來，
 
 
 ![image](/images/地震資料格式.png) 
