--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -47,7 +47,7 @@ def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
     a_lta = []
     r = []
 
-    #fill in zeros for time points that do not yet have an average value
+    # fill in zeros for time points that do not yet have an average value
     for i in range(0,n_sta):
             a_sta.insert(i,0)     
     for i in range(0,n_lta):
@@ -77,10 +77,36 @@ def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
 ### 2. 設定值調整
 
 
-當判斷 P 波到達時間的流程完成後，就可以根據判斷出來的結果做設定值調整。
-為了能更好的去評估 P 波到達時間的判斷結果，我們可以將加速度和比值的變化圖繪製出來，
+關於 STA/LTA 比值偵測方法的參數設定，可以根據判斷結果做設定值調整。
+為了能更好的去評估 P 波到達時間，我們可以先將加速度和比值的變化圖繪製出來，
+再觀察 P 波到達時間是否有在較準確的位置。
 
 
-![image](/images/地震資料格式.png) 
+```python
+def draw_p_arrive_test(t, p_arrive, a, r):
+    fig, ax = plt.subplots(2,1,dpi=150, figsize = (8,4.5))
+    ax[0].set_title('U-D acceleration and STA/LTA ratio')
+    ax[0].plot(t,a_u)
+    ax[0].set_ylabel(r"U-D acceleration")
+    ax[0].grid(True)
+    ax[0].set_xlim(0,t[-1])
+    ax[0].axvline(x=p_arrive, ymin=0, ymax=3,color="blue")
+    
+    ax[1].plot(t,r)
+    ax[1].set_ylabel(r"STA/LTA")
+    ax[1].grid(True)
+    ax[1].set_xlim(0,t[-1])
+    ax[1].axvline(x=p_arrive, ymin=0, ymax=3,color="blue")
+    
+    plt.xlabel(r"time (s)")
+    plt.tight_layout()
+    plt_name = j.split("/")[-1].replace(".txt","") + "_p" + str(p_arrive) + ".png"
+    plt.savefig(plt_name)
+    plt.show()
+```
+
+![image](/images/使用比值法判斷P波到時之示意圖.png) 
 
 
+上方圖片中的藍線為判斷出的 P 波到達時間，倘若發現判斷結果與真實情況有偏差，
+就可以透過調整STA、LTA以及閥值的設定值，盡可能讓大部分的地震資料皆能適用。
