--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -86,7 +86,7 @@ def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
 def draw_p_arrive_test(t, p_arrive, a, r):
     fig, ax = plt.subplots(2,1,dpi=150, figsize = (8,4.5))
     ax[0].set_title('U-D acceleration and STA/LTA ratio')
-    ax[0].plot(t,a_u)
+    ax[0].plot(t,a)
     ax[0].set_ylabel(r"U-D acceleration")
     ax[0].grid(True)
     ax[0].set_xlim(0,t[-1])
