--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -11,7 +11,7 @@ Step2: 地震波偵測方法
 
 
 若要運用上述特性來對地震的震度進行預估，就必須判斷 P 波的到達時間，而 STA/LTA 比值偵測方法就是
-一種可以用來偵測 P 波的到達時間的方法，它主要透過短時間平均值 (short-time-average) 與長時間平均值 (long-time-average) 的比值，並設定一閥值，當比值大於閥值時，就將那時間點判讀為 P 波的到達時間。
+一種可以用來偵測 P 波的到達時間的方法，它主要透過短時間平均值 (STA，short-time-average) 與長時間平均值 (LTA，long-time-average) 的計算來判別地震訊號。
 
 
 ```python
@@ -35,6 +35,11 @@ p_value = 2.0
              
 a_sta, a_lta, r, p_arrive = automatically_picking_p_time(a, dt, n, sta, lta, p_value)
 ```
+
+
+使用 STA/LTA 比值偵測方法判斷 P 波到達時間的流程，首先要將 U-D 方向峰值加速度(垂直)訊號正值化，
+接著計算STA、LTA以及兩者的比值，並設定一閥值，當比值大於閥值時，就將那時間點判讀為 P 波的到達時間。
+
 
 ```python
 def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
