--- a/src/訊號特徵提取.md
+++ b/src/訊號特徵提取.md
@@ -1,1 +1,176 @@
+<h2 align="center">
+Step3: 訊號特徵提取
+</h2>
 
+
+### 1. 提取統計特徵
+
+在機械工程領域中，振動數據的特徵普遍在時域或頻域訊號中進行提取，
+有許多特徵提取的方法都是基於原始訊號的統計資訊和物理理解，對振動訊號的趨勢變化進行分析與判斷。
+
+
+此處我們採用常見統計特徵中的峰間值、絕對平均、最大值、最小值和標準差作為一組範例，
+對地震 P 波前3秒的加速度數據進行特徵提取。
+
+
+```python
+import numpy as np
+
+def calculate_feature(dt, a, p_arrive): 
+    eigenvalue_num = int(p_arrive/dt)
+    print(eigenvalue_num)
+    arrive_after3 = int(eigenvalue_num+3/dt)
+    print(arrive_after3)
+    print(arrive_after3-1)
+        
+    data_Max =  np.max(a[eigenvalue_num:arrive_after3-1])
+    data_Min =  np.min(a[eigenvalue_num:arrive_after3-1])
+    data_P2P = data_Max-data_Min
+    data_Abs_Mean = np.mean(np.abs(a[eigenvalue_num:arrive_after3-1])) 
+    data_STD = np.std(a[eigenvalue_num:arrive_after3-1])
+
+    return data_Max, data_Min, data_P2P, data_Abs_Mean, data_STD
+```
+
+
+### 2. 提取能量特徵
+
+
+有一些專家、學者發現採用 P 波前幾秒的能量特徵，能對大多數的地震做近似預測。
+因此，此處以能量特徵中的加速度峰值、速度峰值、位移峰值和累積絕對速度來當作另一組範例，
+對地震 P 波前3秒的加速度數據進行特徵提取。
+但由於我們取得之地震資料皆為加速度數據，所以速度值及位移值需要對加速度積分來取得，
+且為了降低積分後產生之雜訊對後續分析的影響。
+
+
+> 濾波方式參考: [https://hdps.cwa.gov.tw/hdps/](https://hdps.cwa.gov.tw/hdps/login_page)
+
+
+#### 濾波參數含義：
+- dt: 訊號的採樣時間間隔
+- fl: 濾波截止頻率（低頻）
+- fh: 濾波截止頻率（高頻）
+- btype: 濾波器類型
+  - "lowpass": 低通（保留低於fh的頻率成分）
+  - "highpass": 高通（保留高於fl的頻率成分）
+  - "bandpass": 帶通（保留fl~fh之間的頻率成分）
+  - "bandstop": 帶阻（過濾fl~fh之間的頻率成分）
+
+  
+```python
+dt = 0.005
+fl = 0.075
+fh = 10
+btype = "highpass"
+
+v_f = filter_wave(v, dt, fl, fh, btype)
+d_f = filter_wave(d, dt, fl, fh, btype)
+```
+
+
+#### 濾波參數含義：
+- x: 原始訊號
+- y: 濾波後的訊號
+- order: 濾波器的階數
+
+  
+```python
+from scipy import signal
+
+def filter_wave(x, dt, fl, fh, btype, order=2):
+    fn = 1.0/dt/2.0 
+    if btype=="lowpass":
+        Wn = fh/fn
+    elif btype=="highpass":
+        Wn = fl/fn
+    elif btype=="bandpass" or btype=="bandstop":
+        Wn = (fl/fn, fh/fn)
+    
+    b, a = signal.butter(order, Wn, btype)
+    y = signal.filtfilt(b, a, x)
+    return y
+```
+
+
+對加速度積分並濾波後，就可以取得地震訊號的速度值及位移值，
+並接著計算地震 P 波前3秒速度峰值、位移峰值和累積絕對速度。
+
+
+```python
+import numpy as np
+
+def calculate_feature(dt, a, p_arrive, v_f, d_f, cav): 
+    eigenvalue_num = int(p_arrive/dt)
+    print(eigenvalue_num)
+    arrive_after3 = int(eigenvalue_num+3/dt)
+    print(arrive_after3)
+    print(arrive_after3-1)
+    
+    data_Pa = max(np.abs(a[eigenvalue_num:arrive_after3-1]))
+    data_Pv = max(np.abs(v_f[eigenvalue_num:arrive_after3-1]))
+    data_Pd = max(np.abs(d_f[eigenvalue_num:arrive_after3-1]))
+    data_CAV_p = cav[arrive_after3-1]-cav[eigenvalue_num-1]
+
+    return data_Pa, data_Pv, data_Pd, data_CAV_p
+```
+
+
+### 3. 建立資料集
+
+在模型輸入的部份，不論是回歸還是分類型皆能使用剛剛提取到的特徵組合，
+而模型輸出則分為兩種，當模型為分類型時，以震度作為模型的輸出，而回歸型則會使用最大地動加速
+度（PGA）作為模型的輸出。
+
+
+最大地動加速度的計算流程，要先取 3 向量合成震波，即 U-D 方向 (垂直)、 N-S 方向 (南北)、 E-W 方向 (東西) 的合成震波，計算最大地動加速度（PGA）。
+
+
+```python
+# U-D acceleration
+a = data[:,1]
+# N-S acceleration
+a2 = data[:,2]
+# E-W acceleration
+a3 = data[:,3]
+
+a_all = np.sqrt((abs(a)**2)+(abs(a2)**2)+(abs(a3)**2))
+pga = max(a_all)
+```
+
+
+震度的計算流程，我們採用舊制的地震震度分級，只根據最大地動加速度（PGA）範圍表進行分級，利用上述得到的最大地動加速度（PGA) 進行分級。
+
+
+> 震度分級參考: [https://hdps.cwa.gov.tw/hdps/](https://hdps.cwa.gov.tw/hdps/login_page)
+
+
+```python
+def earthquake_magnitude_standard(pga): 
+    if pga >= 400:
+        magnitude = 7
+    elif pga >= 250 and pga < 400:
+        magnitude = 6
+    elif pga >= 80 and pga < 250:
+        magnitude = 5
+    elif pga >= 25 and pga < 80:
+        magnitude = 4
+    elif pga >= 8 and pga < 25:
+        magnitude = 3
+    elif pga >= 2.5 and pga < 8:
+        magnitude = 2     
+    else:
+        magnitude = 1 
+        
+    return magnitude
+```
+
+最後，我們可以將所有需要的訊號資訊，包含特徵、最大地動加速度（PGA) 以及震度等，彙整並建立一個 (.csv) 檔，這樣我們的資料集就建立完成了。
+
+
+```python
+dic = {"Max":data_Max, "Min":data_Min, "P2P":P2P, "Abs_Mean":Abs_Mean, "STD":STD,
+       "Pa":data_Pa,"Pv":data_Pv,"Pd":data_Pd,"CAV":data_CAV,"Accleration":pga, "Magnitude":magnitude}
+       
+df = pd.DataFrame(dic)
+df.to_csv('earthquake_eigenvalue_dataframe2.csv')
+```
