--- a/src/訊號特徵提取.md
+++ b/src/訊號特徵提取.md
@@ -5,6 +5,7 @@ Step3: 訊號特徵提取
 
 ### 1. 提取統計特徵
 
+
 在機械工程領域中，振動數據的特徵普遍在時域或頻域訊號中進行提取，
 有許多特徵提取的方法都是基於原始訊號的統計資訊和物理理解，對振動訊號的趨勢變化進行分析與判斷。
 
@@ -117,7 +118,7 @@ def calculate_feature(dt, a, p_arrive, v_f, d_f, cav):
 
 ### 3. 建立資料集
 
-在模型輸入的部份，不論是回歸還是分類型皆能使用剛剛提取到的特徵組合，
+在預估地震時，模型輸入不論是回歸還是分類型，皆能使用剛剛提取到的特徵組合，
 而模型輸出則分為兩種，當模型為分類型時，以震度作為模型的輸出，而回歸型則會使用最大地動加速
 度（PGA）作為模型的輸出。
 
