--- a/src/隨機森林模型.md
+++ b/src/隨機森林模型.md
@@ -1,1 +1,45 @@
+<h2 align="center">
+Step4: 隨機森林模型
+</h2>
+
+
+### 1. 隨機森林基本架構
+
+
+隨機森林(Random forest)為進階版的決策樹演算法，它會在訓練階段創建許多決策樹，
+且每棵決策樹都是使用資料集的隨機子集來建構的，可以在隨機特徵子集中搜尋最佳特徵，
+根據目標類型以不同的方式整合所有決策樹的預測結果。
+
+
+若是回歸型就將所有決策樹的輸出做平均來得到預測結果，
+而分類型則採投票多數決的方式來得到所有決策樹的預測結果。
+下方為隨機森林回歸型與分類型的實作範例，當中```X_train```和```y_train```分別是模型訓練集的輸入與輸出。
+
+
+#### 隨機森林參數含義：
+- max_depth: 每個決策樹的最大層數，即根節點和葉節點之間的最長路徑。
+- n_estimators: 隨機森林中的決策樹數量
+- max_features: 分割時節點考慮的最大特徵數量，分為 sqrt、log2及 n_features
+
+
+```python
+from sklearn.ensemble import RandomForestRegressor
+
+rf_reg = RandomForestRegressor(max_depth=20,n_estimators=100,max_features='sqrt')
+
+rf_reg.fit(X_train, y_train)
+predicted = rf_reg.predict(X_train)
+```
+
+
+```python
+from sklearn.ensemble import RandomForestClassifier
+
+rf_cl = RandomForestClassifier(max_depth=20,n_estimators=100,max_features='sqrt')
+
+rf_cl.fit(X_train, y_train)
+predicted = rf_cl.predict(X_train)
+```
+
+
 
