--- a/src/地震波偵測方法.md
+++ b/src/地震波偵測方法.md
@@ -46,31 +46,24 @@ def automatically_picking_p_time(a, dt, n, sta, lta, p_value):
     # calculate the time interval of STA and LTA
     n_sta = int(sta/dt)
     n_lta = int(lta/dt)
-
     a1 = abs(a)
-    a_sta = []
-    a_lta = []
-    r = []
 
-    # fill in zeros for time points that do not yet have an average value
-    for i in range(0,n_sta):
-            a_sta.insert(i,0)     
-    for i in range(0,n_lta):
-            a_lta.insert(i,0)
-            r.insert(i,0)
+    # calculate the STA for each time point
+    a_sta = [0] * n  
+    for i in range(n_sta,n):           
+            a_sta[i] = (sum(a1[i-n_sta:i-1]))/n_sta
+
+    # calculate the LTA for each time point
+    a_lta = [0] * n  
+    for i in range(n_lta,n):          
+            a_lta[i] = (sum(a1[i-n_lta:i-1]))/n_lta
 
     # calculate the STA/LTA for each time point
-    for i in range(n_sta,n):           
-            a_sta1 = (sum(a1[i-n_sta:i-1]))/n_sta
-            a_sta.append(a_sta1)        
-    for i in range(n_lta,n):          
-            a_lta1 = (sum(a1[i-n_lta:i-1]))/n_lta
-            a_lta.append(a_lta1)   
+    r = [0] * n  
     for i in range(n_lta,n):
-            r1 = a_sta[i]/a_lta[i]
-            r.append(r1)  
+            r[i] = a_sta[i]/a_lta[i]
 
-    # determine whether the threshold is reached       
+    # determine whether the threshold is reached 
     for i in range(n_lta,n): 
         if r[i] >= p_value:
             p_arrive = i*dt
