Update and rename 隨機森林模型.md to 機器學習模型.md

--- a/src/機器學習模型.md
+++ b/src/機器學習模型.md
@@ -1,9 +1,9 @@
 <h2 align="center">
-Step4: 隨機森林模型
+Step4: 機器學習模型
 </h2>
 
 
-### 1. 隨機森林基本架構
+### 1. 隨機森林模型
 
 
 隨機森林(Random forest)為進階版的決策樹演算法，它會在訓練階段創建許多決策樹，
