--- a/src/機器學習模型.md
+++ b/src/機器學習模型.md
@@ -3,7 +3,75 @@ Step4: 機器學習模型
 </h2>
 
 
-### 1. 隨機森林模型
+### 1. 資料集劃分
+
+
+在機器學習中，通常我們會將蒐集到的資料使用三分留出法 (Three-way Holdout Method) 進行劃分，
+會將資料分成訓練集 (Training Dataset) 和測試集 (Testing Dataset)，然後再從訓練集中劃分出一部分為驗證集 (Validation Dataset)。
+
+
+#### 各資料集的用途:
+- Training Dataset：用於訓練模型。
+- Validation Dataset: 用於檢驗模型參數的訓練情況。
+- Testing Dataset: 用於評估模型最終表現。
+
+  
+此處利用 Part1 建立的資料集，使用當中的5個統計特徵為模型輸入，
+以最大地動加速度（PGA) 為模型輸出，來當作資料劃分展示時的資料及範例。
+
+
+
+
+
+
+
+下方會展示如何將原先的資料集，使用三分留出法 (Three-way Holdout Method) 進行，將資料集劃分為
+10%為測試集、80%為訓練集以及 10%為驗證集。
+
+
+```python
+from sklearn.model_selection import train_test_split
+
+# Calling the data
+dataset = pd.read_csv("file_path")
+
+# Input location of the data
+model_input = dataset.iloc[:,0:5]
+model_input = model_input.values
+model_input = model_input.astype('float32')
+
+# Output location of the data
+model_output = dataset.iloc[:,5]
+model_output = model_output.values
+model_output = model_output.astype('float32')
+
+# Divide all data into training and testing sets
+x_train_val, x_test, y_train_val, y_test = train_test_split(model_input, model_output, 
+                                                      test_size=1/10, random_state=10)
+
+# Divide all training set into new training and validation sets
+x_train, x_val, y_train, y_val = train_test_split(x_train_val, y_train_val, 
+                                                      test_size=1/9, random_state=10) 
+```
+
+
+#### 隨機森林參數含義：
+- max_depth: 每個決策樹的最大層數，即根節點和葉節點之間的最長路徑。
+- n_estimators: 隨機森林中的決策樹數量。
+- max_features: 分割時節點考慮的最大特徵數量，分為 sqrt、log2及 n_features。
+
+
+```python
+from sklearn.ensemble import RandomForestRegressor
+
+rf_reg = RandomForestRegressor(max_depth=20,n_estimators=100,max_features='sqrt')
+
+rf_reg.fit(X_train, y_train)
+predicted = rf_reg.predict(X_train)
+```
+
+
+### 2. 隨機森林模型
 
 
 隨機森林(Random forest)為進階版的決策樹演算法，它會在訓練階段創建許多決策樹，
@@ -18,8 +86,8 @@ Step4: 機器學習模型
 
 #### 隨機森林參數含義：
 - max_depth: 每個決策樹的最大層數，即根節點和葉節點之間的最長路徑。
-- n_estimators: 隨機森林中的決策樹數量
-- max_features: 分割時節點考慮的最大特徵數量，分為 sqrt、log2及 n_features
+- n_estimators: 隨機森林中的決策樹數量。
+- max_features: 分割時節點考慮的最大特徵數量，分為 sqrt、log2及 n_features。
 
 
 ```python
