--- a/src/機器學習模型.md
+++ b/src/機器學習模型.md
@@ -16,13 +16,11 @@ Step4: 機器學習模型
 - Testing Dataset: 用於評估模型最終表現。
 
   
-此處利用 Part1 建立的資料集，使用當中的5個統計特徵為模型輸入，
-以最大地動加速度（PGA) 為模型輸出，來當作資料劃分展示時的資料及範例。
+此處利用 [Part1](src/訊號特徵提取.md) 建立的資料集，使用當中的5個統計特徵為模型輸入，
+以最大地動加速度（PGA) 為模型輸出，來當作資料劃分展示時的範例。
 
 
-
-
-
+![image](/images/資料集範例.png) 
 
 
 下方會展示如何將原先的資料集，使用三分留出法 (Three-way Holdout Method) 進行，將資料集劃分為
