--- a/src/交叉驗證方法.md
+++ b/src/交叉驗證方法.md
@@ -6,3 +6,96 @@ Step5: 交叉驗證方法
 ### 1. 交叉驗證方法
 
 
+交叉驗證是一種將資料集樣本切割成較小子集的實用方法，為了避免模型對於劃分出的驗證集過度擬合，
+在劃分訓練集與驗證集時，通常會加上交叉驗證(Cross-validation)的環節。
+
+
+而交叉驗證有許多不同的做法，此處我們選擇使用交叉驗證中的 K 折交叉驗證 (K-fold Cross-validation)方法，
+並採用當中的 Stratified K-fold劃分方式，此方式主要是用在資料不平衡的資料集，它能讓劃分後的訓練集與驗證集各類別占比一致。
+
+
+下方會展示如何使用 Stratified K-fold 進行交叉驗證，
+資料集占比會以 10%為測試集、80%為訓練集以及 10%為驗證集來進行，其完整流程可參考下圖。
+
+
+![image](/images/Stratified K-fold之流程示意圖.png.png) 
+
+
+#### StratifiedKFold參數含義:
+- n_splits: 將資料分割為 K 等分。
+- shuffle: 是否在拆分成批次之前對數據進行洗牌。
+- random_state: 需要 shuffle 為 True 才需要設定，功能如同 seed。
+
+
+```python
+from sklearn.model_selection import train_test_split
+
+# Calling the data
+dataset = pd.read_csv("file_path")
+
+# Input location of the data
+model_input = dataset.iloc[:,0:5]
+model_input = model_input.values
+model_input = model_input.astype('float32')
+
+# Output location of the data
+model_output = dataset.iloc[:,5]
+model_output = model_output.values
+model_output = model_output.astype('float32')
+
+# Divide all data into training and testing sets
+x_train_val, x_test, y_train_val, y_test = train_test_split(model_input, model_output, 
+                                                      test_size=0.1, random_state=10)
+
+# Create StratifiedKFold object
+stratified_n_splits = 9
+stratified_random_state = 7
+stratified = StratifiedKFold(n_splits=stratified_n_splits , shuffle=True, random_state=stratified_random_state)  
+```
+
+
+```python
+seed = 10
+max_depth = 10
+n_estimators = 100
+feature = 'sqrt'
+
+for_stratified_magnitude = earthquake_magnitude_standard(y_train_val)
+
+def regressor_cross_validation(seed, max_depth, n_estimators, feature, y_train_val, stratified, for_stratified_magnitude):
+
+   #Seed Number To make sure the productivity of the model
+   np.random.seed(seed)
+  
+   TrainScore_MAE = []
+   ValScore_MAE = []
+   
+   rf_reg = RandomForestRegressor(max_depth=max_depth, n_estimators=n_estimators, max_features='sqrt')
+
+   # 於原先的訓練集中劃分出訓練集與驗證集做交叉驗證
+   for train_index, val_index in stratified.split(x_train_val, for_stratified_magnitude):
+           
+       #print("%s %s" % (train_index,test_index))
+       x_train_fold, x_val_fold = x_train_val[train_index], x_train_val[val_index]
+       y_train_fold, y_val_fold = y_train_val[train_index], y_train_val[val_index] 
+       
+       rf_reg.fit(x_train_fold, y_train_fold)
+       #Train 與 Val 的預測結果
+       predicted_value1 = np.round(rf_reg.predict(x_train_fold))
+       predicted_value2 = np.round(rf_reg.predict(x_predicted_fold))
+                       
+       # 計算訓練集預測誤差
+       y_train_fold, predicted_value1 = np.array(y_train_fold), np.array(predicted_value1)
+       train_mae = np.sum(np.abs(y_train_fold - predicted_value1)) / len(y_train_fold)
+       TrainScore_MAE.append(train_mae)
+       
+       # 計算驗證集預測誤差
+       y_val_fold, predicted_value2 = np.array(y_val_fold), np.array(predicted_value2)
+       val_mae = np.sum(np.abs(y_val_fold - predicted_value2)) / len(y_val_fold)
+       ValScore_MAE.append(val_mae)
+
+  train_score = mean(TrainScore_MAE)
+  val_score = mean(ValScore_MAE)        
+
+return train_score, val_score
+```
