--- a/src/交叉驗證方法.md
+++ b/src/交叉驗證方法.md
@@ -17,8 +17,7 @@ Step5: 交叉驗證方法
 下方會展示如何使用 Stratified K-fold 進行交叉驗證，
 資料集占比會以 10%為測試集、80%為訓練集以及 10%為驗證集來進行，其完整流程可參考下圖。
 
-
-![image](/images/Stratified K-fold之流程示意圖.png.png) 
+![image](/images/StratifiedKfold之流程示意圖.png) 
 
 
 #### StratifiedKFold參數含義:
