--- a/src/交叉驗證方法.md
+++ b/src/交叉驗證方法.md
@@ -11,12 +11,16 @@ Step5: 交叉驗證方法
 
 
 而交叉驗證有許多不同的做法，此處我們選擇使用交叉驗證中的 K 折交叉驗證 (K-fold Cross-validation)方法，
-並採用當中的 Stratified K-fold劃分方式，此方式主要是用在資料不平衡的資料集，它能讓劃分後的訓練集與驗證集各類別占比一致。
-下方會展示如何使用 Stratified K-fold 進行交叉驗證，
-資料集占比會以 10%為測試集、80%為訓練集以及 10%為驗證集來進行，其完整流程可參考下圖。
+並採用當中的 Stratified K-fold劃分方式，此方式主要是用在資料不平衡的資料集，
+它能讓劃分後的訓練集與驗證集各類別占比一致，其完整流程可參考下圖。
 
 
 ![image](/images/StratifiedKfold之流程示意圖.png) 
+
+
+下方會展示如何使用 Stratified K-fold 進行交叉驗證，
+資料集占比會以 10%為測試集、80%為訓練集以及 10%為驗證集，
+而資料震度會當作Stratified K-fold 劃分類別的標準。
 
 
 #### StratifiedKFold參數含義:
