--- a/src/交叉驗證方法.md
+++ b/src/交叉驗證方法.md
@@ -31,6 +31,7 @@ Step5: 交叉驗證方法
 
 ```python
 from sklearn.model_selection import train_test_split
+from sklearn.model_selection import StratifiedKFold
 
 # Calling the data
 dataset = pd.read_csv("file_path")
@@ -52,18 +53,19 @@ x_train_val, x_test, y_train_val, y_test = train_test_split(model_input, model_o
 # Create StratifiedKFold object
 stratified_n_splits = 9
 stratified_random_state = 7
-stratified = StratifiedKFold(n_splits=stratified_n_splits , shuffle=True, random_state=stratified_random_state)  
-```
+stratified = StratifiedKFold(n_splits=stratified_n_splits , shuffle=True, random_state=stratified_random_state)
 
-
-```python
 seed = 10
 max_depth = 10
 n_estimators = 100
 feature = 'sqrt'
 
 for_stratified_magnitude = earthquake_magnitude_standard(y_train_val)
+```
 
+由於我們上方的 ``` n_splits ``` 設定為9，代表會將資料分割為 9 等分，因此，在完成交叉驗證的環節後，可以得到9組訓練集與驗證集的預測結果。
+
+```python
 def regressor_cross_validation(seed, max_depth, n_estimators, feature, y_train_val, stratified, for_stratified_magnitude):
    #Seed Number To make sure the productivity of the model
    np.random.seed(seed)
@@ -92,5 +94,5 @@ def regressor_cross_validation(seed, max_depth, n_estimators, feature, y_train_v
   train_score = mean(TrainScore_MAE)
   val_score = mean(ValScore_MAE)        
 
-return train_score, val_score
+return TrainScore_MAE, ValScore_MAE, train_score, val_score
 ```
