--- a/src/交叉驗證方法.md
+++ b/src/交叉驗證方法.md
@@ -23,7 +23,7 @@ Step5: 交叉驗證方法
 而資料震度會當作Stratified K-fold 劃分類別的標準。
 
 
-#### StratifiedKFold參數含義:
+#### Stratified K-Fold參數含義:
 - n_splits: 將資料分割為 K 等分。
 - shuffle: 是否在拆分成批次之前對數據進行洗牌。
 - random_state: 需要 shuffle 為 True 才需要設定，功能如同 seed。
