--- a/src/模型超參數調整.md
+++ b/src/模型超參數調整.md
@@ -12,7 +12,7 @@ Step5: 交叉驗證方法
 
 下方範例將會使用網格搜索(Grid Search)的方式，
 並選擇隨機森林超參數中的 n_estimators 與 max_depth 作為調整目標，
-對兩者設定一適當的範圍，並根據 [Step5](交叉驗證方法.md)交叉驗證中各個驗證集的平均誤差，
+對兩者設定一適當的範圍，並根據 [Step5](交叉驗證方法.md)交叉驗證中各個驗證集的平均 MAE 誤差，
 透過迭代來找出最佳超參數組合。
 
 
@@ -61,7 +61,9 @@ def regressor_gridsearch(x_train_val, y_train_val, stratified, for_stratified_ma
     return best_parameters, gridsearch_history
 ```
 
-最後，我們可以透過上方迭代的歷史紀錄，繪製一個迭代過程的預測結果的變化圖。
+最後，我們可以透過上方迭代的歷史紀錄，繪製一個迭代過程的預測結果的變化圖，
+從圖中可以更清楚看到網格搜索的收斂迭代情況。
+
 
 ```python
 def draw_regressor_gridsearch_mae(seed, max_depth, gridsearch_draw_n_estimators, gridsearch_draw_train_mae, gridsearch_draw_val_mae):
@@ -78,4 +80,4 @@ def draw_regressor_gridsearch_mae(seed, max_depth, gridsearch_draw_n_estimators,
 ```
 
 
-![image](/images/StratifiedKfold之流程示意圖.png) 
+![image](/images/.png) 
