--- a/src/模型結果分析.md
+++ b/src/模型結果分析.md
@@ -1,1 +1,106 @@
 
+<h2 align="center">
+Step7: 模型結果分析
+</h2>
+
+
+### 1. 模型測試階段
+
+
+經過 [Step6](模型超參數調整.md) 網格搜索方法後，我們在設定範圍內得到一組最佳超參數。
+因此，現在可以利用這組超參數訓練一個新的模型，並使用測試集來評估新模型的最終表現。
+
+
+```python
+def regressor_testing(seed, max_depth, n_estimators, feature, x_test, y_test, x_train_val, y_train_val): 
+    #Seed Number To make sure the productivity of the model
+    np.random.seed(seed)
+    final_best_param_rf_reg = RandomForestRegressor(max_depth=max_depth, n_estimators=n_estimators, max_features='sqrt')
+    
+    # Train 與 Test 的預測結果    
+    final_best_param_rf_reg.fit(x_train_val, y_train_val)
+    final_predicted_value1 = np.round(final_best_param_rf_reg.predict(x_train_val))
+    predicted_value3 = np.round(final_best_param_rf_reg.predict(x_test))
+        
+    # 特徵重要性分析
+    randomforest_feature_importances(best_param_rf_reg_final, feature)
+
+
+    # 計算預測誤差(訓練集)
+    y_train_val, final_predicted_value1 = np.array(y_train_val), np.array(final_predicted_value1)
+    final_train_mape = np.mean(np.abs((y_train_val - final_predicted_value1) / y_train_val)) * 100
+    final_train_mae = np.sum(np.abs(y_train_val - final_predicted_value1)) / len(y_train_val)
+    
+    # 計算預測誤差(測試集)
+    y_test, predicted_value3 = np.array(y_test), np.array(predicted_value3)
+    test_mape = np.mean(np.abs((y_test - predicted_value3) / y_test)) * 100
+    test_mae = np.sum(np.abs(y_test - predicted_value3)) / len(y_test)
+
+    
+    # 計算預測結果的震度
+    data_set = "final_train"
+    final_y_train_magnitude, final_predicted_value1_magnitude = classify_magnitude(y_train_val, final_predicted_value1, data_set)
+    
+    draw_regressor_result_train(y_train_val, final_predicted_value1, final_train_class0, final_train_class1,\
+                        final_predicted_value1_class0, final_predicted_value1_class1, data_set)  
+
+    draw_regressor_magnitude_error(final_y_train_magnitude, final_predicted_value1_magnitude, data_set)  
+    
+    
+    data_set = "test"
+    y_test_magnitude, predicted_value3_magnitude = classify_magnitude(y_test, predicted_value3, data_set)
+     
+
+    Draw_RandomForest_Result.draw_regressor_result_val_test(y_test, predicted_value3, data_set)  
+    
+    Draw_RandomForest_Result.draw_regressor_magnitude_error(y_test_magnitude, predicted_value3_magnitude, data_set)  
+
+    # 計算預測加速度值轉換為震度的正確率
+    Accuracy_final_magnitude_train = np.count_nonzero(final_y_train_magnitude==final_predicted_value1_magnitude)/len(final_y_train_magnitude)
+    Accuracy_magnitude_test = np.count_nonzero(y_test_magnitude==predicted_value3_magnitude)/len(y_test_magnitude)
+   
+    return final_best_param_rf_reg
+```
+
+
+
+
+```python
+def randomforest_feature_importances(final_best_param_rf_reg):
+    # 特徵重要性分析
+    feature_importances = final_best_param_rf_reg.feature_importances_   
+    col_names = ["Max","Min","P2P","Mean(ABS)","STD"] 
+    plt.figure(dpi=150)
+    importances_bar = plt.bar(col_names,feature_importances,color='indigo')
+    plt.bar_label(importances_bar,fmt='%.4f',label_type='edge')
+    plt.title('Feature Importances',fontsize=20, fontweight='bold')
+    plt.ylim(0,0.5) 
+    plt.show() 
+```
+
+
+![image](/images/迭代過程的預測結果變化圖.png) 
+
+
+```python
+def draw_regressor_result_val_test(y_fold, predicted_value, data_set): 
+    fig, ax = plt.subplots(dpi=150)
+    ax.scatter(y_fold, predicted_value, color = '#88c999')
+    ax.plot([0, 350], [0, 350], 'k-', lw=2)
+    plt.legend(['$\mathregular{R^{2}}$: ' + str(round(r2_score(y_fold, predicted_value),2))], loc='best')
+    
+    if data_set == "final_train":
+        plt.title('Prediction Results for Acceleration \n(Training)',fontsize=20, fontweight='bold')
+    
+    if data_set == "test":
+        plt.title("Prediction Results for Acceleration \n(Testing)",fontsize=20, fontweight='bold')
+    
+    plt.xlim(0,350) 
+    plt.ylim(0,350)     
+    ax.set_xlabel('Observed Acceleration',fontsize=16)
+    ax.set_ylabel('Predicted Acceleration',fontsize=16)
+    plt.show()
+
+```
+
+![image](/images/迭代過程的預測結果變化圖.png) 
