--- a/src/模型超參數調整.md
+++ b/src/模型超參數調整.md
@@ -1,9 +1,9 @@
 <h2 align="center">
-Step5: 交叉驗證方法
+Step6: 模型超參數調整
 </h2>
 
 
-### 1. 模型超參數調整
+### 1. 網格搜索方法
 
 
 模型的超參數設定會直接影響模型結構和效能，而這些超參數都會於訓練模型之前透過手動的方式設定，
