--- a/src/模型結果分析.md
+++ b/src/模型結果分析.md
@@ -15,59 +15,36 @@ Step7: 模型結果分析
 def regressor_testing(seed, max_depth, n_estimators, feature, x_test, y_test, x_train_val, y_train_val): 
     #Seed Number To make sure the productivity of the model
     np.random.seed(seed)
+
+    # New Model Training 
     final_best_param_rf_reg = RandomForestRegressor(max_depth=max_depth, n_estimators=n_estimators, max_features='sqrt')
-    
-    # Train 與 Test 的預測結果    
     final_best_param_rf_reg.fit(x_train_val, y_train_val)
+
+    # Prediction results of training and testing  
     final_predicted_value1 = np.round(final_best_param_rf_reg.predict(x_train_val))
     predicted_value3 = np.round(final_best_param_rf_reg.predict(x_test))
         
-    # 特徵重要性分析
-    randomforest_feature_importances(best_param_rf_reg_final, feature)
-
-
-    # 計算預測誤差(訓練集)
-    y_train_val, final_predicted_value1 = np.array(y_train_val), np.array(final_predicted_value1)
-    final_train_mape = np.mean(np.abs((y_train_val - final_predicted_value1) / y_train_val)) * 100
+    # Calculate the prediction error of the training dataset
+    y_train_val, final_predicted_value1 = np.array(y_train_val),np.array(final_predicted_value1)
     final_train_mae = np.sum(np.abs(y_train_val - final_predicted_value1)) / len(y_train_val)
     
-    # 計算預測誤差(測試集)
+    # Calculate the prediction error of the testing dataset
     y_test, predicted_value3 = np.array(y_test), np.array(predicted_value3)
-    test_mape = np.mean(np.abs((y_test - predicted_value3) / y_test)) * 100
     test_mae = np.sum(np.abs(y_test - predicted_value3)) / len(y_test)
 
-    
-    # 計算預測結果的震度
-    data_set = "final_train"
-    final_y_train_magnitude, final_predicted_value1_magnitude = classify_magnitude(y_train_val, final_predicted_value1, data_set)
-    
-    draw_regressor_result_train(y_train_val, final_predicted_value1, final_train_class0, final_train_class1,\
-                        final_predicted_value1_class0, final_predicted_value1_class1, data_set)  
-
-    draw_regressor_magnitude_error(final_y_train_magnitude, final_predicted_value1_magnitude, data_set)  
-    
-    
-    data_set = "test"
-    y_test_magnitude, predicted_value3_magnitude = classify_magnitude(y_test, predicted_value3, data_set)
-     
-
-    Draw_RandomForest_Result.draw_regressor_result_val_test(y_test, predicted_value3, data_set)  
-    
-    Draw_RandomForest_Result.draw_regressor_magnitude_error(y_test_magnitude, predicted_value3_magnitude, data_set)  
-
-    # 計算預測加速度值轉換為震度的正確率
-    Accuracy_final_magnitude_train = np.count_nonzero(final_y_train_magnitude==final_predicted_value1_magnitude)/len(final_y_train_magnitude)
-    Accuracy_magnitude_test = np.count_nonzero(y_test_magnitude==predicted_value3_magnitude)/len(y_test_magnitude)
-   
-    return final_best_param_rf_reg
+    return final_best_param_rf_reg, final_train_mae, test_mae
 ```
 
 
+### 2. 特徵重要性分析
+
+
+下方為的特徵重要性分析圖的實作範例，對預測結果而言，透過特徵重要性分析，
+可以發現在所有特徵中，哪一些特徵的重要程度較高，進而篩選出較適合的特徵作為模型輸入。
 
 
 ```python
 def randomforest_feature_importances(final_best_param_rf_reg):
-    # 特徵重要性分析
     feature_importances = final_best_param_rf_reg.feature_importances_   
     col_names = ["Max","Min","P2P","Mean(ABS)","STD"] 
     plt.figure(dpi=150)
@@ -79,8 +56,16 @@ def randomforest_feature_importances(final_best_param_rf_reg):
 ```
 
 
-![image](/images/迭代過程的預測結果變化圖.png) 
+<p align="center">
+<img src="/images/特徵重要性分析範例圖.png" alt="drawing" width="50%"/>
+</p>
 
+
+### 3. 模型預測結果
+
+
+最後，我們可以將模型的預測結果視覺化，從圖中可以更清楚看出各資料集的預測情況。
+以下方的測試集預測結果為例，從圖中可以看到在加速度觀測值位處 100 至 150 的資料點，其被低估的情形較明顯。
 
 ```python
 def draw_regressor_result_val_test(y_fold, predicted_value, data_set): 
@@ -103,4 +88,9 @@ def draw_regressor_result_val_test(y_fold, predicted_value, data_set):
 
 ```
 
-![image](/images/迭代過程的預測結果變化圖.png) 
+<p align="center">
+<img src="/images/模型訓練集結果範例圖.png" alt="drawing" width="50%"/>
+<img src="/images/模型測試集結果範例圖.png" alt="drawing" width="50%"/>
+</p>
+
+
