--- a/src/模型超參數調整.md
+++ b/src/模型超參數調整.md
@@ -79,4 +79,7 @@ def draw_regressor_gridsearch_mae(seed, max_depth, gridsearch_draw_n_estimators,
 ```
 
 
-![image](/images/迭代過程的預測結果變化圖.png) 
+<p align="center">
+<img src="/images/迭代過程的預測結果變化圖.png" alt="drawing" width="50%"/>
+</p>
+
