--- a/src/原始資料取得與讀取.md
+++ b/src/原始資料取得與讀取.md
@@ -9,7 +9,9 @@ Step1: 原始資料取得與讀取
 地震資料的取得可以透過向中央氣象局申購，或是下載測站公開的地震資料，兩者取得的地震資料格式皆為加速度數據之文字檔(.txt)，如下圖所示。
 
 
-![image](/images/地震資料格式.png) 
+<p align="center">
+<img src="/images/地震資料格式.png" alt="drawing" width="70%"/>
+</p>
 
 
 文字檔(.txt)中的內容記錄該次地震事件之各項資料，加速度數據的採樣為每 0.005秒，即採樣頻率 200Hz，而當中 U 為 U-D 方向峰值加速度(垂直)，N 為 N-S 方向峰值加速度(南北)，E 為 E-W 方向峰值加速度(東西)。
